[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/UI.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Clean.otf"

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = SubResource( 1 )

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Menu_Options" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Menu_Options"]
modulate = Color( 1, 1, 1, 0.835294 )
margin_left = 95.0
margin_top = 64.0
margin_right = 927.0
margin_bottom = 552.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Restart" type="Button" parent="Menu_Options"]
margin_left = 408.0
margin_top = 192.0
margin_right = 599.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 2 )
text = "Restart Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Messages" type="Control" parent="."]
anchor_right = 0.023
anchor_bottom = 0.053
margin_right = -7.552
margin_bottom = -7.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Messages"]
visible = false
modulate = Color( 1, 1, 1, 0.784314 )
anchor_top = 11.2
anchor_right = 63.5
anchor_bottom = 19.0
margin_top = 99.2
margin_right = 7.99994
margin_bottom = 139.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text_Area" type="Label" parent="Messages/Panel"]
margin_left = 8.0
margin_top = 24.0
margin_right = 1016.0
margin_bottom = 200.0
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu_Options/Button_Restart" to="." method="_on_Button_Restart_pressed"]
